css/style.css
body,html {
  padding: 0px;
  margin: 0px;
}

a {
  color: #DC2727;
  text-decoration: none;
}

h1 {
  font-face: sans-serif;
  text-align: center;
}

h2,h3 {
  color: #DC2727;
  font-family: Arial, sans-serif;
  font-weight: normal;
}
h3 {
  font-size: 16pt;
}
h2 { border-bottom: 1px solid #DC2727 }
h4 { margin-top: 0px; margin-bottom: 5px; }

p {
  font-size: 1.1em;
  line-height: 1.5em;
  font-family: sans-serif;
}

.center {
  text-align: center;
}

#top-wrap {
  width: 100%;
  background-color: #EFEDE4;
}

#bottom-wrap {
  width: 100%;
  background-color: #000;
}

#bottom {
  height: 160px;
  margin: 0px auto;
  background: #EFEDE4 url("../img/PD_bg_bottom.png") no-repeat bottom center;
  position: relative;
}

#bottom-logo {
  position: absolute;
  width: 190px;
  height: 80px;
  top: 50px;
  right: 0px;
  background: transparent url("../img/Logo_bottom2.png") no-repeat bottom right;
}

#wrap {
  overflow: hidden;
  margin: 0px auto;
  position: relative;
  padding-bottom: 30px;
}

#header {
  height: 135px;
  position: relative;
  background: transparent url("../img/PD_bg_top.png") no-repeat bottom center;
}

#header #mark a {
  display: block;
  position: absolute;
  left: 60px;
  top: 10px;
  width: 240px;
  height: 80px;
  background-image: url("../img/PD_logo.png");
}

.who a {
  color: #000;
}

.who a:hover {
  text-decoration: underline;
}

.column {
    margin: 0px 10px;
}

.narrow-column {
  padding: 0px 10px;
}


.service {
  padding-left: 55px;
  padding-top: 15px;
}
.service  p { margin: 0px; margin-bottom: 10px }

.service#ruby { background: url("../img/ruby.png") no-repeat 0 15px }
.service#haskell { background: url("../img/haskell.png") no-repeat 0 15px }
.service#python { background: url("../img/python.png") no-repeat 0 15px }
.service#postgres { background: url("../img/postgres.png") no-repeat 0 15px }

.column.services h3 {
  margin-bottom: 0px;
}

.project {
  margin-bottom: 40px;
  margin-top: 10px;
}

.project .technologies {
  padding: 0 10px;
  vertical-align: top;
}

.project .description {
  padding: 0 10px;
}

hr {
  border: 0;
  margin: 50px;
}

.image {
  margin: 0;
  float: left;
  padding: 30px;
  width: 380px;
  display: inline;
}

.caption {
  text-align: center;
  font-style: italic;
}

.clearfix {
  clear: both;
}
@media (min-width: 1100px) {

  #bottom, #wrap {
    width: 1100px;
  }
  .column {
    width: 365px;
    display: inline-block;
    vertical-align: top;
  }

  .narrow-column {
    width: 300px;
  }

  .project .technologies {
    width: 50px;
    display: inline-block;
  }
  .project .description {
    width: 900px;
    display: inline-block;
  }

}

@media (max-width: 1099px) and (min-width: 680px) {
  .column {
    width: 100%;
  }
}

@media (max-width: 679px) {
  #header {
    height: 200px !important;
  }
}

